renamed "Database" to "Connection".

incorporated fork of sqlite-simple!

fork!

v2.3.26:
	* Add support for GHC 8.8 and Stackage LTS 15+

v2.3.25:
	* Upgrade embedded sqlite library to 3.28.0.

v2.3.24:
	* Upgrade embedded sqlite3 library to 3.24.0.
	* Add faster `stepNoCB` function for statements that don't callback to Haskell functions.
	* Use faster "unsafe" FFI calls for the following functions:
	  reset, blobOpen, blobClose, blobReopen, blobRead, blobWrite, backupStep, errcode, errmsg
	  as they are frequently used and don't callback to Haskell functions.
	* Use faster Haskell memory allocator in blobRead function.

v2.3.23:
	* Add Semigroup instance to support GHC 8.4.1 (thanks @gwils)
	* Build clean up for Android support (thanks @kmicklas)

v2.3.22:
	* Update sqlite to 3.22.0

v2.3.21
	* Update sqlite to 3.20.1
	* Add -DSQLITE_ENABLE_FTS5 to build options

v2.3.20
	* Enable use of usleep (thanks @dbdbdb)
	* Add sqlite3.h and sqlite3ext.h to install-includes (thanks @duog)

v2.3.19
	* Upgrade embedded sqlite3 library to 3.15.2.

v2.3.18
	* Upgrade embedded sqlite3 library to 3.15.0.

	* Fix regressions in the test suite that were either introduced by changes
	  in GHC 8 and/or stuff we missed in previous releases.

v2.3.17
	* Use a randomly created temp file for test database when running
	unit tests instead of a hardcoded file under 'dist/'.  Hopefully
	fixes https://github.com/IreneKnapp/direct-sqlite/issues/60

v2.3.16
	* Add an Eq instance for SQLError

v2.3.15
	* Add support for the online backup API

	* Add support for incremental blob I/O

	* Add support for zeroblobs

	* Add support for enabling/disabling the shared cache mode

	* Add low-level bindings to sqlite3_wal_hook

	* Add function for retrieving the db handle from a custom function
	  context.

	* Add bindings for sqlite3_errcode

	* Improve Travis CI coverage to cover more GHC versions (GHC 7.4 and higher)

	* Big thanks to Mario Titas and Marcin Tolysz for the above!

v2.3.14