@@ -1,3 +1,5 @@
+library renamed to "dani-sqlite"
+
 renamed "Database" to "Connection".
 
 incorporated fork of sqlite-simple!
